--- a/index.html
+++ b/index.html
@@ -92,20 +92,20 @@
       <!--============================ sponsored section start  ===========================-->
       <section class="sponsored">
        <div class="container">
-       <div class="row">
-        <div class="col d-block">
+       <div class="row d-flex justify-content-between">
+        <div class="col-12 col-md-2">
           <img src="assets/image/sponsored/01.png" alt="">
         </div>
-        <div class="col d-block">
-          <img src="assets/image/sponsored/01.png" alt="">
+        <div class="col-12 col-md-2">
+          <img src="assets/image/sponsored/02.png" alt="">
         </div>
-        <div class="col">
-          <img src="assets/image/sponsored/01.png" alt="">
+        <div class="col-12 col-md-2">
+          <img src="assets/image/sponsored/03.png" alt="">
         </div>
-        <div class="col">
-          <img src="assets/image/sponsored/01.png" alt="">
+        <div class="col-12 col-md-2">
+          <img src="assets/image/sponsored/04.png" alt="">
         </div>
-        <div class="col">
+        <div class="col-12 col-md-2">
           <img src="assets/image/sponsored/01.png" alt="">
         </div>
        </div>
