top heading add

--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
        </div>
       </section>
       <!--============================ sponsored section end  ===========================-->
+
+
+      <!--============================ gallery section start  ===========================-->
+      <section>
+        <div class="container">
+          <div class="top_heading text-center">
+            <h2><span class="grnClr">Amazing</span> <span class="blkColor">Gallery</span></h2>
+          </div>
+        </div>
+      </section>
+      <!--============================ gallery section end  ===========================-->
     </main>
 
     <!-- bootstrap js -->
