gallery section add

--- a/index.html
+++ b/index.html
@@ -117,8 +117,35 @@
       <!--============================ gallery section start  ===========================-->
       <section>
         <div class="container">
-          <div class="top_heading text-center">
+          <div class="top_heading text-center mb-5">
             <h2><span class="grnClr">Amazing</span> <span class="blkColor">Gallery</span></h2>
+          </div>
+
+          <div class="gallery">
+            <div class="row">
+              <div class="col-lg-4 mb-3">
+                    <div class="row">
+                      <img class="img-fluid" src="assets/image/gallery/r01.png" alt="">
+                    </div>
+              </div>
+              <div class="col-lg-4 mb-3">
+                    <div class="row mb-3">
+                      <img class="img-fluid" src="assets/image/gallery/r02.png" alt="">
+                    </div>
+                    <div class="row">
+                      <img class="img-fluid" src="assets/image/gallery/r03.png" alt="">
+                    </div>
+              </div>
+              <div class="col-lg-4">
+                    <div class="row mb-3">
+                      <img class="img-fluid" src="assets/image/gallery/r04.png" alt="">
+                    </div>
+                    <div class="row">
+                      <img class="img-fluid" src="assets/image/gallery/r05.png" alt="">
+                    </div>
+              </div>
+        
+            </div>
           </div>
         </div>
       </section>
