design section add

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- box icon link  -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <!-- bootstrap link  -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <!-- css link  -->
@@ -13,7 +18,7 @@
   <body>
     <!--============================ header section start  ===========================-->
     <header class="mb-5">
-      <nav class="navbar navbar-expand-lg  container">
+      <nav class="navbar navbar-expand-lg container">
         <div class="container-fluid">
           <a class="navbar-brand logo" href="#">Resort.io</a>
           <button
@@ -68,19 +73,35 @@
           <div class="row d-flex align-items-center justify-content-center">
             <div class="col-lg-6 mb-5">
               <div class="hero_content d-flex flex-column gap-4">
-                <h1>Find <span class="grnClr">Best Hotel</span> for
-                  you!</h1>
-                  <p>Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. Always get adieus nature day course for common. My little garret repair to desire he esteem.</p>
-                  <div class="hero_btn d-flex gap-4">
-                    <a class="btn1" href="http://" target="_blank" rel="noopener noreferrer">Explore</a>
-                    <a class="btn2" href="http://" target="_blank" rel="noopener noreferrer">Contact</a>
-                  </div>
+                <h1>Find <span class="grnClr">Best Hotel</span> for you!</h1>
+                <p>
+                  Relation so in confined smallest children unpacked delicate.
+                  Why sir end believe uncivil respect. Always get adieus nature
+                  day course for common. My little garret repair to desire he
+                  esteem.
+                </p>
+                <div class="hero_btn d-flex gap-4">
+                  <a
+                    class="btn1"
+                    href="http://"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Explore</a
+                  >
+                  <a
+                    class="btn2"
+                    href="http://"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Contact</a
+                  >
+                </div>
               </div>
             </div>
 
             <div class="col-lg-6">
               <div class="hero_img">
-                <img src="assets/image/Hero Image (1).png" alt="">
+                <img src="assets/image/Hero Image (1).png" alt="" />
               </div>
             </div>
           </div>
@@ -88,71 +109,292 @@
       </section>
       <!--============================ hero section end  ===========================-->
 
-
       <!--============================ sponsored section start  ===========================-->
       <section class="sponsored">
-       <div class="container">
-       <div class="row d-flex justify-content-between">
-        <div class="col-12 col-md-2">
-          <img src="assets/image/sponsored/01.png" alt="">
-        </div>
-        <div class="col-12 col-md-2">
-          <img src="assets/image/sponsored/02.png" alt="">
-        </div>
-        <div class="col-12 col-md-2">
-          <img src="assets/image/sponsored/03.png" alt="">
-        </div>
-        <div class="col-12 col-md-2">
-          <img src="assets/image/sponsored/04.png" alt="">
-        </div>
-        <div class="col-12 col-md-2">
-          <img src="assets/image/sponsored/01.png" alt="">
-        </div>
-       </div>
-       </div>
-      </section>
-      <!--============================ sponsored section end  ===========================-->
-
-
-      <!--============================ gallery section start  ===========================-->
-      <section>
         <div class="container">
-          <div class="top_heading text-center mb-5">
-            <h2><span class="grnClr">Amazing</span> <span class="blkColor">Gallery</span></h2>
-          </div>
-
-          <div class="gallery">
-            <div class="row">
-              <div class="col-lg-4 mb-3">
-                    <div class="row">
-                      <img class="img-fluid" src="assets/image/gallery/r01.png" alt="">
-                    </div>
-              </div>
-              <div class="col-lg-4 mb-3">
-                    <div class="row mb-3">
-                      <img class="img-fluid" src="assets/image/gallery/r02.png" alt="">
-                    </div>
-                    <div class="row">
-                      <img class="img-fluid" src="assets/image/gallery/r03.png" alt="">
-                    </div>
-              </div>
-              <div class="col-lg-4">
-                    <div class="row mb-3">
-                      <img class="img-fluid" src="assets/image/gallery/r04.png" alt="">
-                    </div>
-                    <div class="row">
-                      <img class="img-fluid" src="assets/image/gallery/r05.png" alt="">
-                    </div>
-              </div>
-        
+          <div class="row d-flex justify-content-between">
+            <div class="col-12 col-md-2">
+              <img src="assets/image/sponsored/01.png" alt="" />
+            </div>
+            <div class="col-12 col-md-2">
+              <img src="assets/image/sponsored/02.png" alt="" />
+            </div>
+            <div class="col-12 col-md-2">
+              <img src="assets/image/sponsored/03.png" alt="" />
+            </div>
+            <div class="col-12 col-md-2">
+              <img src="assets/image/sponsored/04.png" alt="" />
+            </div>
+            <div class="col-12 col-md-2">
+              <img src="assets/image/sponsored/01.png" alt="" />
             </div>
           </div>
         </div>
       </section>
-      <!--============================ gallery section end  ===========================-->
-    </main>
+      <!--============================ sponsored section end  ===========================-->
 
+      <!--============================ gallery section start  ===========================-->
+      <section class="gallery_part">
+        <div class="container">
+          <div class="top_heading text-center mb-5">
+            <h2>
+              <span class="grnClr">Amazing</span>
+              <span class="blkColor">Gallery</span>
+            </h2>
+          </div>
+
+          <div class="gallery mb-5">
+            <div class="row">
+              <div class="col-lg-4 mb-3">
+                <div class="row">
+                  <img
+                    class="img-fluid"
+                    src="assets/image/gallery/r01.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div class="col-lg-4 mb-3">
+                <div class="row mb-3">
+                  <img
+                    class="img-fluid"
+                    src="assets/image/gallery/r02.png"
+                    alt=""
+                  />
+                </div>
+                <div class="row">
+                  <img
+                    class="img-fluid"
+                    src="assets/image/gallery/r03.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="row mb-3">
+                  <img
+                    class="img-fluid"
+                    src="assets/image/gallery/r04.png"
+                    alt=""
+                  />
+                </div>
+                <div class="row">
+                  <img
+                    class="img-fluid"
+                    src="assets/image/gallery/r05.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="gallery_btn text-center">
+            <a
+              class="btn1"
+              href="http://"
+              target="_blank"
+              rel="noopener noreferrer"
+              >view more</a
+            >
+          </div>
+        </div>
+      </section>
+      <!--============================ gallery section end  ===========================-->
+
+      <!--============================ design section start  ===========================-->
+      <section class="design">
+        <div class="container">
+          <div class="top_heading text-center mb-5">
+            <h2>
+              <span class="blkColor2">Gallery</span>
+              <span class="grnClr2">Destinations</span>
+            </h2>
+          </div>
+
+          <div class="row">
+            <!-- card one  -->
+            <div class="col-lg-4 mb-3">
+              <div class="card design_card">
+                <img
+                  class="card-img-top p-2"
+                  src="assets/image/Design/D01.png"
+                  alt=""
+                />
+                <div class="card-body">
+                  <div class="card_title d-flex justify-content-between">
+                    <h5 class="card-title">Hotel The Mitsui Kyoto</h5>
+                    <div class="icon">
+                      <i class="bx bx-star"></i>
+                      <i class="bx bx-star"></i>
+                      <i class="bx bx-star"></i>
+                      <i class="bx bx-star"></i>
+                      <i class="bx bx-star"></i>
+                    </div>
+                  </div>
+                  <p class="card-text">
+                    Always get adieus nature day course for common. Relation so
+                    in confined smallest children unpacked delicate. Why sir end
+                    believe uncivil respect.
+                  </p>
+                  <div class="design_footer d-flex gap-4">
+                    <div class="">
+                      <img src="assets/image/Design/01.png" alt="" />
+                    </div>
+                    <div class="">
+                      <img src="assets/image/Design/02.png" alt="" />
+                    </div>
+                    <div class="">
+                      <img src="assets/image/Design/03.png" alt="" />
+                    </div>
+                    <div class="">
+                      <img src="assets/image/Design/04.png" alt="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- card two  -->
+            <div class="col-lg-4 mb-3">
+              <div class="card design_card">
+                <img
+                  class="card-img-top p-2"
+                  src="assets/image/Design/D02.png"
+                  alt=""
+                />
+                <div class="card-body">
+                  <div class="card_title d-flex justify-content-between">
+                    <h5 class="card-title">Hoshinoya Tokyo</h5>
+                    <div class="icon">
+                      <i class="bx bx-star"></i>
+                      <i class="bx bx-star"></i>
+                      <i class="bx bx-star"></i>
+                      <i class="bx bx-star"></i>
+                      <i class="bx bx-star"></i>
+                    </div>
+                  </div>
+                  <p class="card-text">
+                    Always get adieus nature day course for common. Relation so
+                    in confined smallest children unpacked delicate. Why sir end
+                    believe uncivil respect.
+                  </p>
+                  <div class="design_footer d-flex gap-4">
+                    <div class="">
+                      <img src="assets/image/Design/01.png" alt="" />
+                    </div>
+                    <div class="">
+                      <img src="assets/image/Design/02.png" alt="" />
+                    </div>
+                    <div class="">
+                      <img src="assets/image/Design/03.png" alt="" />
+                    </div>
+                    <div class="">
+                      <img src="assets/image/Design/04.png" alt="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- card three  -->
+            <div class="col-lg-4">
+              <div class="card design_card">
+                <img
+                  class="card-img-top p-2"
+                  src="assets/image/Design/D03.png"
+                  alt=""
+                />
+                <div class="card-body">
+                  <div class="card_title d-flex justify-content-between">
+                    <h5 class="card-title">Darwin Waterfront Luxury</h5>
+                    <div class="icon">
+                      <i class="bx bx-star"></i>
+                      <i class="bx bx-star"></i>
+                      <i class="bx bx-star"></i>
+                      <i class="bx bx-star"></i>
+                      <i class="bx bx-star"></i>
+                    </div>
+                  </div>
+                  <p class="card-text">
+                    Always get adieus nature day course for common. Relation so
+                    in confined smallest children unpacked delicate. Why sir end
+                    believe uncivil respect.
+                  </p>
+                  <div class="design_footer d-flex gap-4">
+                    <div class="">
+                      <img src="assets/image/Design/01.png" alt="" />
+                    </div>
+                    <div class="">
+                      <img src="assets/image/Design/02.png" alt="" />
+                    </div>
+                    <div class="">
+                      <img src="assets/image/Design/03.png" alt="" />
+                    </div>
+                    <div class="">
+                      <img src="assets/image/Design/04.png" alt="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--============================ design section end  ===========================-->
+    </main>
+    <!-- box icon js  -->
+    <script src="js/boxicons.js"></script>
     <!-- bootstrap js -->
     <script src="js/bootstrap.bundle.js"></script>
   </body>
 </html>
+
+<!-- <div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="col">
+    <div class="card
+    p-2 shadow-lg">
+      <img src="assets/image/Design/D01.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <div class="title d-flex justify-content-between">
+          <h5 class="card-title">Hotel The Mitsui Kyoto</h5>
+          <div class="icon">
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+          </div>
+        </div>
+        <p class="card-text">Always get adieus nature day course for common. Relation so in confined smallest children unpacked delicate. Why sir end believe uncivil respect. </p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="assets/image/Design/D02.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="assets/image/Design/D03.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+  </div>
+</div> -->
